--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/components/navbar/khanCraneLogo.webp" />
+    <link rel="icon" type="image/svg+xml" href="./src/components/navbar/skcranelogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/7442a09a4d.js" crossorigin="anonymous"></script>
     <title>Khan Crane</title>
